<resources>
    <string name="app_name">TYM Keyboard</string>
    <string name="my_ime">TYM Keyboard</string>
    <string name="label_subtype_my_MM">ဗမာ (Unicode)</string>
    <string name="label_subtype_shanni_MM">Shan Ni</string>
    <string name="label_subtype_shn_MM">လိၵ်ႈတႆး (Unicode)</string>
    <string name="label_subtype_taile_MM">ᥖᥭᥰ</string>
    <string name="label_subtype_taikhamti">တဲးၵံးတီႈ</string>
    <string name="label_subtype_en_GB">English</string>
    <string name="word_separators">\u0020\u200B.,;:!?\n()[]*&amp;@{}/&lt;&gt;_+=|&quot;၊။</string>
    <string name="shan_consonants">ၵၶငၸသၺတထၼပၽၾမယရလဝႁဢ</string>
    <string name="title_activity_imesetting">TYM Keyboard</string>
    <string name="settings_name">TYM Keyboard</string>
    <string name="language_selection_title">Input languages</string>
    <string name="select_language">Select input languages</string>
    <string name="faq">Help!</string>
    <string name="test_keyboard_title">Test Keyboard</string>
    <string name="test_keyboard_summ">To preview your Keyboard</string>
    <string name="go_to_ime_setting">Enable Keyboard</string>
    <string name="go_to_ime_setting_summ">Click to go to Language and Input method setting.</string>
    <string name="choose_keyboard_title">Choose Keyboard</string>
    <string name="choose_keyboard_summ">Select TYM Keyboard</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_setting">TYM Keyboard Setting</string>
    <string name="choose_theme_title">Choose Theme</string>
    <string name="choose_theme_summ">Select a Keyboard Theme</string>
    <string name="play_sound_summ">Enable/Disable sound when typing</string>\
    <string name="hint_keylabel_title">Hint Key Label</string>
    <string name="hint_keylabel_summ">Show/Hide Double Tap and Pop up hint key label</string>
</resources>
